--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,12 @@
     "prisma": "^5.0.0"
   },
   "dependencies": {
-    "@prisma/client":"^5.0.0",
-    "express": "^4.18.2"
+    "@prisma/client": "^5.0.0",
+    "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "morgan": "^1.10.0"
   }
 }
