--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "react-redux": "^8.1.2",
+    "redux-thunk": "^2.4.2",
     "tailwindcss": "3.3.3"
   }
 }
