--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,8 @@
   "license": "ISC",
   "devDependencies": {
     "nodemon": "^3.0.1",
-    "prisma": "^5.0.0"
+    "prisma": "^5.0.0",
+    "faker": "^5.5.3"
   },
   "dependencies": {
     "@prisma/client": "^5.0.0",
