fix(config): ports were configured, cors access and seeder was fixed

--- a/server/.env-example
+++ b/server/.env-example
@@ -9,5 +9,6 @@ DB_PASSWORD=password #contraseña de tu base de datos
 DB_HOST=localhost #
 DB_PORT=5432 # puerto de la base de datos
 DB_NAME=descuentosya #nombre de la base de datos
+PORT=3001 #puerto abierto para el servidor
 
 DATABASE_URL=postgresql://${DB_USER}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_NAME}
