--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "Backend de un sitio web para un club, desarrollado en Express con una base de datos PostgreSQL y ORM Prisma. El sitio permite a los miembros del club registrarse y acceder a beneficios exclusivos proporcionados por empresas asociadas. Estos beneficios incluyen descuentos en una variedad de servicios y productos, disponibles solo para los miembros. El backend se encarga de gestionar la autenticación, la inscripción de nuevos miembros y la administración de los beneficios asociados. Con Express como framework, Prisma como ORM y PostgreSQL como base de datos, se garantiza un rendimiento eficiente y una experiencia de usuario fluida para todos los socios del club.",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon index.js",
+    "dev": "node index.js",
     "seed": "PRISMA_FORCE_NAPI=true npx prisma db push && PRISMA_FORCE_NAPI=true npx prisma migrate dev && yes | node ./prisma/seeder/seeder.js"
   },
   "author": "CebrasDevs",
