--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon index.js",
-    "seed": "npx prisma db push && npx prisma migrate dev && node ./prisma/seeder/seeder.js"
+    "seed": "npx prisma db push && npx prisma migrate dev && yes | node ./prisma/seeder/seeder.js"
   },
   "author": "CebrasDevs",
   "license": "ISC",
