--- a/server/package.json
+++ b/server/package.json
@@ -10,9 +10,9 @@
   "author": "CebrasDevs",
   "license": "ISC",
   "devDependencies": {
+    "faker": "^5.5.3",
     "nodemon": "^3.0.1",
-    "prisma": "^5.0.0",
-    "faker": "^5.5.3"
+    "prisma": "^5.0.0"
   },
   "dependencies": {
     "@prisma/client": "^5.0.0",
@@ -21,6 +21,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.1",
     "morgan": "^1.10.0"
   }
 }
