--- a/client/package.json
+++ b/client/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mercadopago/sdk-react": "^0.0.13",
     "@reduxjs/toolkit": "^1.9.5",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
+    "mercadopago": "^1.5.17",
     "next": "13.4.12",
     "next-auth": "^4.22.3",
     "postcss": "8.4.27",
