--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@prisma/client": "^5.0.0",
     "body-parser": "^1.20.2",
+    "cloudinary": "^1.40.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -24,6 +25,7 @@
     "jsonwebtoken": "^9.0.1",
     "mercadopago": "^1.5.17",
     "morgan": "^1.10.0",
-    "nodemailer": "^6.9.4"
+    "nodemailer": "^6.9.4",
+    "puppeteer": "^21.0.3"
   }
 }
