--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@cloudinary/react": "^1.11.2",
     "@cloudinary/url-gen": "^1.11.1",
     "@mercadopago/sdk-react": "^0.0.13",
+    "@react-google-maps/api": "^2.19.2",
     "@reduxjs/toolkit": "^1.9.5",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
