--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.1.1",
+    "axios": "^1.4.0",
     "body-parser": "^1.20.2",
     "cloudinary": "^1.40.0",
     "cookie-parser": "^1.4.6",
@@ -27,6 +28,7 @@
     "mercadopago": "^1.5.17",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.4",
+    "paypal-rest-sdk": "^1.8.1",
     "puppeteer": "^21.0.3"
   }
 }
