--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "react-icons": "^4.10.1",
     "react-redux": "^8.1.2",
     "redux-thunk": "^2.4.2",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss": "3.3.3"
   }
 }
