--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@prisma/client": "^5.1.1",
     "axios": "^1.4.0",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cloudinary": "^1.40.0",
     "cookie-parser": "^1.4.6",
