--- a/server/package.json
+++ b/server/package.json
@@ -29,6 +29,7 @@
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.4",
     "paypal-rest-sdk": "^1.8.1",
-    "puppeteer": "^21.0.3"
+    "puppeteer": "^21.0.3",
+    "qrcode": "^1.5.3"
   }
 }
