--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.4.0",
     "body-parser": "^1.20.2",
     "cloudinary": "^1.40.0",
+    "cookie": "^0.5.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
