--- a/client/package.json
+++ b/client/package.json
@@ -34,5 +34,8 @@
     "redux-thunk": "^2.4.2",
     "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss": "3.3.3"
+  },
+  "devDependencies": {
+    "dotenv": "^16.3.1"
   }
 }
