--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,7 @@
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.1",
     "mercadopago": "^1.5.17",
+    "moment-timezone": "^0.5.43",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.4",
     "paypal-rest-sdk": "^1.8.1",
